@@ -1,4 +1,5 @@
-2118 [MediaInfo] improved DVD source information detection
+2119 [MKV Muxer] added job status message during muxing
+2118 [MediaInfo] improved information detection for DVD sources
 2117 [Chapter Creator] improved DVD PGC handling
 2116 [VobSubber] improved detection of subtitle streams
 2115 [HD Streams Extractor] fixed handling of english tracks in a MKV container when the track name contains a language
